--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
-  "name": "Rocket.Chat",
+  "name": "Widechat2",
   "description": "Have your own open-source Slack-like online chat platform.",
   "repository": "https://github.com/TheAngelis/widechat2",
   "logo": "https://raw.githubusercontent.com/RocketChat/Rocket.Chat/master/public/images/logo/512x512.png?v=3",
   "keywords": ["meteor", "social", "community", "chat"],
-  "website": "https://rocket.chat",
+  "website": "https://chat.evolve.net.br",
   "env": {
     "BUILDPACK_URL": "https://github.com/RocketChat/heroku-buildpack-meteor.git",
-    "HEROKU_APP_NAME": {
+    "widechat2": {
       "description": "Please re-enter your App Name from the top.",
       "required": true
     }
